# Software-Rasterizer

./: README.md
renderer/: CMakeLists.txt  ambient_shader.cpp  depth_shader.cpp  error.cpp  error.h  general_shader.cpp  geometry.h  image.cpp  image.h  macos.mm  main.cpp  model.cpp  model.h  platform.h  scene.cpp  scene.h  shader.h  shadow_shader.cpp  tgaimage.cpp  tgaimage.h  transformation.cpp  transformation.h  triangle.cpp  triangle.h  win32.cpp  wireframe.cpp
renderer/result/: ambient.tga  depth.tga  general.tga  shadow.tga
